Fix| horisontal scrollbar

--- a/assets/css/scrollbar.css
+++ b/assets/css/scrollbar.css
@@ -1,18 +1,25 @@
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 9px;
   }
   
   /* Track */
-  ::-webkit-scrollbar-track {
+  ::-webkit-scrollbar-track:vertical {
     background: #f9b03387; 
   }
    
   /* Handle */
-  ::-webkit-scrollbar-thumb {
+  ::-webkit-scrollbar-thumb:vertical {
     background: #00509fbe; 
   }
   
   /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
+  ::-webkit-scrollbar-thumb:vertical:hover {
     background: #004F9F; 
   }
+
+  ::-webkit-scrollbar-thumb:horizontal {
+    background: rgba(255, 255, 255, 0);
+}
+
+
+
